v19-my-custom-scenario/analysis-template/blue-green/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: analysis-bluegreen-rollout
  namespace: analysis-bluegreen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: analysis-app
  template:
    metadata:
      labels:
        app: analysis-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.28
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html/index.html
              name: nginx-config
              subPath: index.html
      volumes:
        - name: nginx-config
          configMap:
            name: v2-cm
  minReadySeconds: 30
  revisionHistoryLimit: 3
  strategy:
    blueGreen:
      activeService: active
      previewService: preview
      autoPromotionEnabled: true
      prePromotionAnalysis:     #### Pre-Promotion Analysis
        templates:
        - templateName: success-rate-pre
        args:
        - name: service-name
          value: preview
