v19-my-custom-scenario/analysis-template/blue-green/services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: analysis-bluegreen
  name: active
spec:
  selector:
    app: analysis-app
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: analysis-bluegreen
  name: preview
spec:
  selector:
    app: analysis-app
  ports:
  - port: 80
    targetPort: 80
