v19-my-custom-scenario/analysis-template/blue-green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analysis-ingress
  namespace: analysis-bluegreen
  labels:
    app.kubernetes.io/name: analysis-ingress
spec:
  rules:
  - host: app.demo.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: active
            port: 
              number: 80
